# ShadowPCAgent

./: .gitignore  Launch-ShadowOverlay.ps1  README.md  config.sample.json  pyproject.toml
artifacts/: run-history.jsonl  run-summary.json
docs/: architecture.md  code-intelligence.md  gui-interaction.md  local-codex-adjacent-setup.md  operations.md  plan.md  roadmap.md  safety.md
scripts/: Launch-ShadowOverlay.ps1  update-main-and-setup-local-agent.ps1
src/shadowpcagent/: __main__.py  cli.py  config.py  core.py  drafts.py  editor.py  executors.py  gui.py  logging_utils.py  models.py  patcher.py  powershell.py  safety.py  workspace.py
src/shadowpcagent/tools/: __init__.py
src/shadowpcagent/tools/shadow_search/: __init__.py  index.py  query.py
tests/: test_cli.py  test_powershell.py
